rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-rollout
  namespace: rollouts-demo-istio
spec:   # this section is like a Kubernetes Deploymnet
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: istio-rollout
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: istio-rollout
    spec:
      containers:
      - name: istio-rollout
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:   # this section is unique to a Rollout resource
    canary:    # deployment strategy. Argo Rollouts can also do blue-green deployments
      canaryService: istio-rollout-canary   # reference to a Kubernetes Service
      stableService: istio-rollout-stable   
      # analysis will be performed in background, while rollout is progressing through its steps
      # inline analysis is also available
      analysis:
        startingStep: 1   # index of step list, of when to start this analysis
        templates:
        - templateName: istio-success-rate  # references an AnalysisTemplate Argo Rollouts resource
        args:   # arguments allow AnalysisTemplates to be re-used
        - name: service   #  the variable defined here is used in the AnalysisTemplate, in the queries
          value: istio-rollout-canary
        - name: namespace   # this variable is also used in the AnalysisTemplate, in the queries
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
      trafficRouting:
        istio:
          virtualService:
            name: istio-rollout-vsvc
            routes:
            - primary
      steps:   # Steps define sequence of steps to take during an update of the
      - setWeight: 10   # Sets the percentage of traffic to canary ReplicaSet to 10%
      - pause: {}   # pause indefinitely until manually resumed
      - setWeight: 20   
      - pause: {duration: 20s}   # Pauses the rollout for 20 seconds. Supported units: s, m, h
      - setWeight: 30
      - pause: {duration: 20s}
      - setWeight: 40
      - pause: {duration: 20s}
      - setWeight: 50
      - pause: {duration: 20s}
      - setWeight: 60
      - pause: {duration: 20s}
      - setWeight: 70
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 20s}
      - setWeight: 90
      - pause: {duration: 20s}
