services.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-canary
  namespace: rollouts-demo-istio
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout

---
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-stable
  namespace: rollouts-demo-istio
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout
