virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-rollout-vsvc
  namespace: rollouts-demo-istio
spec:
  gateways:
    - istio-rollout-gateway
  hosts:
  http:
    - name: primary
      route:
        - destination:
            host: istio-rollout-stable
          weight: 100
        - destination:
            host: istio-rollout-canary
          weight: 0
